Variational auto encoder notebook fix (#58)
* fix VAE notebook, add cifar and MRI slice VAEs

--- a/notebooks/saliency_maps.ipynb
+++ b/notebooks/saliency_maps.ipynb
@@ -355,9 +355,9 @@
    "outputs": [],
    "source": [
     "sys.argv = ['train', \n",
-    "            '--tensors', '/mnt/disks/ecg-text3/2019-04-26/', \n",
+    "            '--tensors', '/mnt/disks/ecg-rest-31k/2019-06-10/', \n",
     "            '--input_tensors', 'ecg_rest_1lead', \n",
-    "            '--output_tensors', 'ecg_rhythm',\n",
+    "            '--output_tensors', 'ecg_semi_coarse_with_poor',\n",
     "            '--batch_size', '6',\n",
     "            '--epochs', '2',  \n",
     "            '--learning_rate', '0.001',\n",
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grads = saliency_map(test_tensor, model, 'output_ecg_rhythm_categorical', 0)\n",
+    "grads = saliency_map(test_tensor, model, 'output_ecg_semi_coarse_with_poor_categorical', 0)\n",
     "_, axes = plt.subplots(6, 1, figsize=(18, 14))\n",
     "[axes[i].plot(grads[i,:,:].flatten('F')) for i in range(6)]"
    ]
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grads = saliency_map(test_tensor, model, 'output_ecg_rhythm_categorical', 3)\n",
+    "grads = saliency_map(test_tensor, model, 'output_ecg_semi_coarse_with_poor_categorical', 3)\n",
     "_, axes = plt.subplots(6, 1, figsize=(18, 14))\n",
     "[axes[i].plot(grads[i,:,:].flatten('F')) for i in range(6)]"
    ]
@@ -422,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdir = '/mnt/disks/ecg-text3/2019-04-26/'\n",
+    "xdir = '/mnt/disks/ecg-rest-31k/2019-06-10/'\n",
     "paths = [xdir+'1238558.hd5', xdir+'1258475.hd5', xdir+'1286494.hd5', xdir+'1381627.hd5', \n",
     "         xdir+'1487911.hd5', xdir+'1509361.hd5', xdir+'1578315.hd5', xdir+'1616127.hd5', xdir+'1723645.hd5', ]\n",
     "generator = TensorGenerator(8, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grads = saliency_map(test_tensor, model, 'output_ecg_rhythm_categorical', 3)\n",
+    "grads = saliency_map(test_tensor, model, 'output_ecg_semi_coarse_with_poor_categorical', 3)\n",
     "_, axes = plt.subplots(8, 1, figsize=(18, 14))\n",
     "[axes[i].plot(grads[i,:,:].flatten('F')) for i in range(8)]"
    ]
@@ -458,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grads = saliency_map(test_tensor, model, 'output_ecg_rhythm_categorical', 0)\n",
+    "grads = saliency_map(test_tensor, model, 'output_ecg_semi_coarse_with_poor_categorical', 0)\n",
     "_, axes = plt.subplots(8, 1, figsize=(18, 14))\n",
     "[axes[i].plot(grads[i,:,:].flatten('F')) for i in range(8)]"
    ]
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grads = saliency_map(test_tensor[7:8], model, 'output_ecg_rhythm_categorical', 2)"
+    "grads = saliency_map(test_tensor[7:8], model, 'output_ecg_semi_coarse_with_poor_categorical', 2)"
    ]
   },
   {
@@ -478,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grads = saliency_map(test_tensor[7:8], model, 'output_ecg_rhythm_categorical', 0)"
+    "grads = saliency_map(test_tensor[7:8], model, 'output_ecg_semi_coarse_with_poor_categorical', 0)"
    ]
   },
   {
