--- a/notebooks/variational_autoencoders/vae.ipynb
+++ b/notebooks/variational_autoencoders/vae.ipynb
@@ -146,66 +146,61 @@
     "input_shape = (original_dim, )\n",
     "intermediate_dim = 1024\n",
     "batch_size = 1000\n",
-    "latent_dim = 8\n",
-    "epochs = 48\n",
-    "\n",
-    "x = Input(batch_shape=(batch_size, original_dim))\n",
-    "h = Dense(intermediate_dim, activation='relu', kernel_initializer='glorot_normal')(x)\n",
-    "h = Dense(intermediate_dim, activation='relu', kernel_initializer='glorot_normal')(h)\n",
-    "z_mean = Dense(latent_dim, kernel_initializer='glorot_normal')(h)\n",
-    "z_log_sigma = Dense(latent_dim, kernel_initializer='glorot_normal')(h)\n",
-    "\n",
+    "latent_dim = 16\n",
+    "epochs = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def sampling(args):\n",
+    "    \"\"\"Reparameterization trick by sampling from an isotropic unit Gaussian.\n",
+    "    # Arguments\n",
+    "        args (tensor): mean and log of variance of Q(z|X)\n",
+    "    # Returns\n",
+    "        z (tensor): sampled latent vector\n",
+    "    \"\"\"\n",
+    "\n",
     "    z_mean, z_log_var = args\n",
     "    batch = K.shape(z_mean)[0]\n",
     "    dim = K.int_shape(z_mean)[1]\n",
-    "    # by default, random_normal has mean=0 and std=1.0\n",
+    "    # by default, random_normal has mean = 0 and std = 1.0\n",
     "    epsilon = K.random_normal(shape=(batch, dim))\n",
-    "    return z_mean + (K.exp(0.5 * z_log_var) * epsilon)\n",
+    "    return z_mean + K.exp(0.5 * z_log_var) * epsilon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VAE model = encoder + decoder\n",
+    "# build encoder model\n",
+    "inputs = Input(shape=input_shape, name='encoder_input')\n",
+    "x = Dense(intermediate_dim, activation='relu')(inputs)\n",
+    "z_mean = Dense(latent_dim, name='z_mean')(x)\n",
+    "z_log_var = Dense(latent_dim, name='z_log_var')(x)\n",
     "\n",
+    "# use reparameterization trick to push the sampling out as input\n",
     "# note that \"output_shape\" isn't necessary with the TensorFlow backend\n",
-    "# so you could write `Lambda(sampling)([z_mean, z_log_sigma])`\n",
-    "z = Lambda(sampling, output_shape=(latent_dim,))([z_mean, z_log_sigma])\n",
+    "z = Lambda(sampling, output_shape=(latent_dim,), name='z')([z_mean, z_log_var])\n",
     "\n",
-    "\n",
-    "decoder_h = Dense(intermediate_dim, activation='relu', kernel_initializer='glorot_normal')\n",
-    "decoder_mean = Dense(original_dim, activation='sigmoid', kernel_initializer='glorot_normal')\n",
-    "h_decoded = decoder_h(z)\n",
-    "h_decoded = Dense(intermediate_dim, activation='relu', kernel_initializer='glorot_normal')(h_decoded)\n",
-    "x_decoded_mean = decoder_mean(h_decoded)\n",
-    "\n",
-    "# end-to-end autoencoder\n",
-    "vae = Model(x, x_decoded_mean)\n",
-    "vae.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# encoder, from inputs to latent space\n",
-    "encoder = Model(x, z_mean)\n",
+    "# instantiate encoder model\n",
+    "encoder = Model(inputs, [z_mean, z_log_var, z], name='encoder')\n",
     "encoder.summary()\n",
-    "# generator, from latent space to reconstructed inputs\n",
-    "decoder_input = Input(shape=(latent_dim,))\n",
-    "_h_decoded = decoder_h(decoder_input)\n",
-    "_x_decoded_mean = decoder_mean(_h_decoded)\n",
-    "generator = Model(decoder_input, _x_decoded_mean)\n",
-    "generator.summary()\n",
-    "def vae_loss(x, x_decoded_mean):\n",
-    "    xent_loss = binary_crossentropy(x, x_decoded_mean)\n",
-    "    kl_loss = kullback_leibler_divergence(x, x_decoded_mean)\n",
-    "    return xent_loss + kl_loss\n",
     "\n",
-    "vae.compile(optimizer='rmsprop', loss=vae_loss)\n",
+    "# build decoder model\n",
+    "latent_inputs = Input(shape=(latent_dim,), name='z_sampling')\n",
+    "x = Dense(intermediate_dim, activation='relu')(latent_inputs)\n",
+    "outputs = Dense(original_dim, activation='linear')(x)\n",
     "\n",
-    "vae.fit(x_train, x_train,\n",
-    "        shuffle=True,\n",
-    "        epochs=epochs,\n",
-    "        batch_size=batch_size,\n",
-    "        validation_data=(x_test, x_test))"
+    "# instantiate decoder model\n",
+    "decoder = Model(latent_inputs, outputs, name='decoder')\n",
+    "decoder.summary()"
    ]
   },
   {
@@ -214,11 +209,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_test_encoded = encoder.predict(x_test, batch_size=batch_size)\n",
-    "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(x_test_encoded[:, 0], x_test_encoded[:, 1], c=y_test, cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.show()"
+    "# instantiate VAE model\n",
+    "outputs = decoder(encoder(inputs)[2])\n",
+    "vae = Model(inputs, outputs, name='vae_mlp')\n",
+    "vae.summary()\n",
+    "# Compute VAE loss\n",
+    "def vae_loss(y_true, y_pred):\n",
+    "    #reconstruction_loss = original_dim*binary_crossentropy(y_true, y_pred)\n",
+    "    reconstruction_loss = original_dim*mse(y_true, y_pred)\n",
+    "    kl_loss = - 0.5 * K.sum(1 + z_log_var - K.square(z_mean) - K.exp(z_log_var), axis=-1)\n",
+    "    vae_loss = K.mean(reconstruction_loss + kl_loss)\n",
+    "    return vae_loss\n",
+    "vae.compile(optimizer='adam', loss=vae_loss)\n",
+    "vae.summary()\n",
+    "\n",
+    "vae.fit(x_train, x_train, shuffle=True, epochs=epochs, batch_size=batch_size, validation_data=(x_test, x_test))"
    ]
   },
   {
@@ -227,35 +232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(y_test.shape)\n",
     "x_test_encoded = encoder.predict(x_test, batch_size=batch_size)\n",
     "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(x_test_encoded[:, 2], x_test_encoded[:, 3], c=y_test, cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_test_encoded = encoder.predict(x_test, batch_size=batch_size)\n",
-    "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(x_test_encoded[:, 4], x_test_encoded[:, 5], c=y_test, cmap='jet')\n",
-    "plt.colorbar()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_test_encoded = encoder.predict(x_test, batch_size=batch_size)\n",
-    "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(x_test_encoded[:, 6], x_test_encoded[:, 7], c=y_test, cmap='jet')\n",
+    "plt.scatter(x_test_encoded[2][:, 0], x_test_encoded[2][:, 1], c=y_test, cmap='jet')\n",
     "plt.colorbar()\n",
     "plt.show()"
    ]
@@ -269,6 +249,7 @@
     "n = 20  # how many digits we will display\n",
     "plt.figure(figsize=(20, 4))\n",
     "x_test_generated = vae.predict(x_test, batch_size=batch_size)\n",
+    "x_test_generated2 = decoder.predict(x_test_encoded[2])\n",
     "for i in range(n):\n",
     "    # display original\n",
     "    ax = plt.subplot(2, n, i + 1)\n",
@@ -297,17 +278,47 @@
     "digit_size = 28\n",
     "figure = np.zeros((digit_size * n, digit_size * n))\n",
     "# we will sample n points within [-15, 15] standard deviations\n",
-    "grid_x = np.linspace(-3, 3, n)\n",
-    "grid_y = np.linspace(-3, 3, n)\n",
-    "\n",
+    "grid_x = np.linspace(-10, 10, n)\n",
+    "grid_y = np.linspace(-10, 10, n)\n",
+    "idx = np.zeros((latent_dim))\n",
     "for i, yi in enumerate(grid_x):\n",
     "    for j, xi in enumerate(grid_y):\n",
-    "        z_sample = np.array([[0, 0, xi, yi, 0, 0, 0, 0]])\n",
-    "        #z_sample = np.array([[xi, yi]])\n",
-    "        x_decoded = generator.predict(z_sample)\n",
+    "        idx[6] = xi\n",
+    "        idx[7] = yi\n",
+    "        z_sample = np.array([idx])\n",
+    "        x_decoded = decoder.predict(z_sample)\n",
     "        digit = x_decoded[0].reshape(digit_size, digit_size)\n",
     "        figure[i * digit_size: (i + 1) * digit_size,\n",
     "               j * digit_size: (j + 1) * digit_size] = digit\n",
+    "\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(figure)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display a 2D manifold of the digits\n",
+    "n = 15  # figure with 15x15 digits\n",
+    "digit_size = 28\n",
+    "figure = np.zeros((digit_size * n, digit_size * n))\n",
+    "# we will sample n points within [-15, 15] standard deviations\n",
+    "grid_x = np.linspace(0, 1, n)\n",
+    "grid_y = np.linspace(0, 1, n)\n",
+    "for i, alpha in enumerate(grid_x):\n",
+    "    for j, alpha2 in enumerate(grid_x):\n",
+    "        z = (alpha*alpha2*x_test_encoded[2][0])\n",
+    "        z += ((1-alpha)*alpha2*x_test_encoded[2][1])\n",
+    "        z += (alpha*(1-alpha2)*x_test_encoded[2][2])\n",
+    "        z += ((1-alpha)*(1-alpha2)*x_test_encoded[2][3])\n",
+    "        z = np.expand_dims(z, axis = 0)\n",
+    "        x_decoded = decoder.predict(z)\n",
+    "        digit = x_decoded[0].reshape(digit_size, digit_size)\n",
+    "        figure[j * digit_size: (j + 1) * digit_size, i * digit_size: (i + 1) * digit_size] = digit\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(figure)\n",
@@ -338,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
