--- a/notebooks/ecg/exercise_ecg.ipynb
+++ b/notebooks/ecg/exercise_ecg.ipynb
@@ -297,7 +297,7 @@
     "# ML4CVD Imports\n",
     "from ml4cvd.arguments import parse_args\n",
     "from ml4cvd.recipes import train_multimodal_multitask\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model\n",
+    "from ml4cvd.models import make_multimodal_multitask_model\n",
     "from ml4cvd.tensor_generators import TensorGenerator\n",
     "\n",
     "sys.argv = ['train', \n",
@@ -314,13 +314,7 @@
     "            '--id', 'ecg_regresser']\n",
     "args = parse_args()\n",
     "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_x, args.pool_y, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)\n",
+    "model = make_multimodal_multitask_model(**args.__dict__)\n",
     "model = train_model_from_generators(model, generate_train, generate_valid, args.training_steps,\n",
     "                                        args.validation_steps, args.batch_size, args.epochs, args.patience,\n",
     "                                        args.output_folder, args.id, args.inspect_model, args.inspect_show_labels)"
