--- a/notebooks/mri/mri_tsne.ipynb
+++ b/notebooks/mri/mri_tsne.ipynb
@@ -23,7 +23,7 @@
     "from ml4cvd.arguments import parse_args\n",
     "from ml4cvd.tensor_generators import big_batch_from_minibatch_generator, test_train_valid_tensor_generators\n",
     "from ml4cvd.recipes import train_shallow_model, train_multimodal_multitask, test_multimodal_multitask\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators, make_hidden_layer_model\n",
+    "from ml4cvd.models import make_multimodal_multitask_model, train_model_from_generators, make_hidden_layer_model\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -53,13 +53,7 @@
     "            '--id', 'mri_systole_diastole_unet_lv_mass_diseases']\n",
     "args = parse_args()\n",
     "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_x, args.pool_y, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)\n",
+    "model = make_multimodal_multitask_model(**args.__dict__)\n",
     "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(args.tensor_maps_in, args.tensor_maps_out,\n",
     "                                                                        generate_test, args.test_steps)"
    ]
