--- a/notebooks/attention.ipynb
+++ b/notebooks/attention.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# ML4CVD Imports\n",
     "from ml4cvd.arguments import parse_args\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators\n",
+    "from ml4cvd.models import train_model_from_generators\n",
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image\n",
