--- a/notebooks/ecg/ecg_lunch.ipynb
+++ b/notebooks/ecg/ecg_lunch.ipynb
@@ -33,7 +33,7 @@
     "from ml4cvd.arguments import parse_args\n",
     "from ml4cvd.tensor_writer_ukbb import write_tensors\n",
     "from ml4cvd.recipes import train_multimodal_multitask\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model\n",
+    "from ml4cvd.models import make_multimodal_multitask_model\n",
     "from ml4cvd.tensor_generators import TensorGenerator"
    ]
   },
@@ -56,13 +56,7 @@
     "            '--inspect_model',\n",
     "            '--id', 'ecg_regresser']\n",
     "args = parse_args()\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_x, args.pool_y, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)"
+    "model = make_multimodal_multitask_model(**args.__dict__)\n"
    ]
   },
   {
