--- a/notebooks/ecg/ecg_wave_model.ipynb
+++ b/notebooks/ecg/ecg_wave_model.ipynb
@@ -31,7 +31,7 @@
     "from ml4cvd.tensor_generators import test_train_valid_tensor_generators\n",
     "from ml4cvd.defines import TENSOR_EXT, IMAGE_EXT, MRI_TO_SEGMENT, MRI_SEGMENTED\n",
     "from ml4cvd.recipes import train_multimodal_multitask, test_multimodal_multitask\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators"
+    "from ml4cvd.models import make_multimodal_multitask_model, train_model_from_generators"
    ]
   },
   {
@@ -120,13 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)"
+    "model = make_multimodal_multitask_model(**args.__dict__)\n"
    ]
   },
   {
