--- a/notebooks/mri/mri_sketch.ipynb
+++ b/notebooks/mri/mri_sketch.ipynb
@@ -33,7 +33,7 @@
     "from ml4cvd.tensor_generators import test_train_valid_tensor_generators\n",
     "from ml4cvd.defines import TENSOR_EXT, IMAGE_EXT, MRI_TO_SEGMENT, MRI_SEGMENTED\n",
     "from ml4cvd.recipes import train_multimodal_multitask, test_multimodal_multitask\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators"
+    "from ml4cvd.models import make_multimodal_multitask_model, train_model_from_generators"
    ]
   },
   {
@@ -188,13 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_x, args.pool_y, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)"
+    "model = make_multimodal_multitask_model(**args.__dict__)\n"
    ]
   },
   {
@@ -249,13 +243,7 @@
     "args.training_steps = 1500\n",
     "args.inspect_model = False\n",
     "args.model_file = './recipes_output/mri_slice_labeler/mri_slice_labeler.hd5'\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)\n",
+    "model = make_multimodal_multitask_model(**args.__dict__)\n",
     "model = train_model_from_generators(model, generate_train, generate_valid, args.training_steps,\n",
     "                                        args.validation_steps, args.batch_size, args.epochs, args.patience,\n",
     "                                        args.output_folder, args.id, args.inspect_model, args.inspect_show_labels)"
@@ -268,13 +256,7 @@
    "outputs": [],
    "source": [
     "args.model_file = './recipes_output/mri_slice_labeler/mri_slice_labeler.hd5'\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)\n",
+    "model = make_multimodal_multitask_model(**args.__dict__)\n",
     "prediction = model.predict_generator(generate_test, steps=1)\n",
     "plt.imsave('./figures/mri_prediction_example'+slice_idx+IMAGE_EXT, np.argmax(prediction, axis=-1)[0])\n",
     "Image('./figures/mri_prediction_example'+slice_idx+IMAGE_EXT)"
