--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "# ML4CVD Imports\n",
     "from ml4cvd.arguments import parse_args\n",
-    "from ml4cvd.models import make_multimodal_to_multilabel_model, train_model_from_generators\n",
+    "from ml4cvd.models import make_multimodal_multitask_model, train_model_from_generators\n",
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image\n",
@@ -193,13 +193,7 @@
     "            '--model_layers', '/mnt/ml4cvd/projects/jamesp/data/models/mri_slice_seg_unet.hd5',\n",
     "            '--id', 'mri_slice_segmenter']\n",
     "args = parse_args()\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_x, args.pool_y, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)"
+    "model = make_multimodal_multitask_model(**args.__dict__)\n"
    ]
   },
   {
@@ -307,13 +301,7 @@
     "            '--model_layers', '/mnt/ml4cvd/projects/jamesp/data/models/ecg_rest_wave_regress_afib_1lead.hd5',\n",
     "            '--id', 'ecg_rest_wave_regress_afib_1lead']\n",
     "args = parse_args()\n",
-    "model = make_multimodal_to_multilabel_model(args.model_file, args.model_layers, args.model_freeze,\n",
-    "                                                args.tensor_maps_in, args.tensor_maps_out, args.activation,\n",
-    "                                                args.dense_layers, args.dropout, args.mlp_concat, args.conv_layers,\n",
-    "                                                args.max_pools, args.res_layers, args.dense_blocks, args.block_size,\n",
-    "                                                args.conv_bn, args.conv_x, args.conv_y, args.conv_z, args.conv_dropout,\n",
-    "                                                args.conv_width, args.u_connect, args.pool_x, args.pool_y, args.pool_z, args.padding,\n",
-    "                                                args.learning_rate)"
+    "model = make_multimodal_multitask_model(**args.__dict__)\n"
    ]
   },
   {
