Tensormaps for LVH criteria and ECG resting plots (#67)
* Added extraction of R and S amplitudes from XML during tensorization
* Added TMAPS to compute LVH criteria from amplitudes (new notebook for testing)
* Added plotting functionality for 12-lead resting ECGs including median waveforms and R S amplitudes

--- a/notebooks/ecg/ecg_plotting.ipynb
+++ b/notebooks/ecg/ecg_plotting.ipynb
@@ -40,7 +40,7 @@
     "#DATA_DIRECTORY = '/Users/pbatra/broad/local_data_sets/tensors/test/2019-03-21'\n",
     "DATA_DIRECTORY = '/mnt/disks/ecg-rest-31k/2019-06-10/'\n",
     "leads = {} # dict[name] -> array\n",
-    "file_id = '3854970.hd5'\n",
+    "file_id = '1000795.hd5'\n",
     "with h5py.File(os.path.join(DATA_DIRECTORY, file_id)) as hd5:\n",
     "        for field in hd5['ecg_rest']:\n",
     "                leads[field] = list(hd5['ecg_rest'][field])"
@@ -87,8 +87,8 @@
     "twelve_leads = defaultdict(dict)\n",
     "for key, data in leads.items():\n",
     "    print(key, len(data))\n",
+    "    twelve_leads[key]['raw'] = leads[key]\n",
     "    if len(data) == 5000:\n",
-    "        twelve_leads[key]['raw'] = leads[key]\n",
     "        (twelve_leads[key]['ts_reference'], twelve_leads[key]['filtered'], twelve_leads[key]['rpeaks'], \n",
     "         twelve_leads[key]['template_ts'], twelve_leads[key]['templates'], twelve_leads[key]['heart_rate_ts'], \n",
     "         twelve_leads[key]['heart_rate']) = ecg.ecg(signal=leads[key], sampling_rate = 500.) "
@@ -103,18 +103,41 @@
     "# plot will be in seconds vs mV, boxes are \n",
     "sec_per_box = 0.04\n",
     "mv_per_box = .1\n",
-    "time_interval = 2.5 # time-interval per plot in seconds. ts_Reference data is in s, voltage measurement is 5 uv per lsb\n",
+    "time_interval = 2.5  # time-interval per plot in seconds. ts_Reference data is in s, voltage measurement is 5 uv per lsb\n",
+    "median_interval = 1.2  # 600 samples at 500Hz\n",
     "raw_scale = 0.005 # convert to mV\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=3, ncols=4, sharey='row', figsize=(24,18), tight_layout=True)\n",
+    "fig, ax = plt.subplots(nrows=6, ncols=4, sharey='row', figsize=(24,18), tight_layout=True)\n",
     "lead_mapping = np.array([['strip_I','strip_aVR', 'strip_V1', 'strip_V4'],\n",
     "              ['strip_II','strip_aVL', 'strip_V2', 'strip_V5'],\n",
     "              ['strip_III','strip_aVF', 'strip_V3', 'strip_V6'],\n",
     "             ])\n",
-    "\n",
+    "median_mapping = np.array([['median_I','median_aVR', 'median_V1', 'median_V4'],\n",
+    "              ['median_II','median_aVL', 'median_V2', 'median_V5'],\n",
+    "              ['median_III','median_aVF', 'median_V3', 'median_V6'],\n",
+    "             ])\n",
     "for i in range(0,3):\n",
+    "    for j in range(0,4):        \n",
+    "        lead_name = median_mapping[i,j]\n",
+    "        lead = twelve_leads[lead_name]\n",
+    "       # ax[i,j].set_xlim(j*time_interval,(j+1)*time_interval)\n",
+    "        ax[i,j].set_ylim(-1.5, 1.5) # -1.5mV -> 1.5mV\n",
+    "        ax[i,j].xaxis.set_major_locator(MultipleLocator(0.2)) # major grids at every .2sec = 5 * 0.04 sec\n",
+    "        ax[i,j].yaxis.set_major_locator(MultipleLocator(0.5)) # major grids at every .5mV \n",
+    "\n",
+    "        ax[i,j].xaxis.set_minor_locator(AutoMinorLocator(5))\n",
+    "        ax[i,j].yaxis.set_minor_locator(AutoMinorLocator(5))\n",
+    "\n",
+    "        ax[i,j].grid(which='major', color='#CCCCCC', linestyle='--')\n",
+    "        ax[i,j].grid(which='minor', color='#CCCCCC', linestyle=':')\n",
+    "\n",
+    "        ax[i,j].plot(np.arange(0.0, median_interval, median_interval/len(lead['raw'])), [elem_ * raw_scale for elem_ in lead['raw']], label='raw')\n",
+    "        ax[i,j].set_title(lead_name)\n",
+    "        ax[i,j].legend(loc='upper left')\n",
+    "        \n",
+    "for i in range(3,6):\n",
     "    for j in range(0,4):\n",
-    "        lead_name = lead_mapping[i,j]\n",
+    "        lead_name = lead_mapping[i-3,j]\n",
     "        lead = twelve_leads[lead_name]\n",
     "        ax[i,j].set_xlim(j*time_interval,(j+1)*time_interval)\n",
     "        ax[i,j].set_ylim(-1.5, 1.5) # -1.5mV -> 1.5mV\n",
@@ -132,6 +155,8 @@
     "        ax[i,j].plot(lead['ts_reference'], [elem_ * raw_scale for elem_ in lead['raw']], label='raw')\n",
     "        ax[i,j].set_title(lead_name)\n",
     "        ax[i,j].legend(loc='upper left')\n",
+    "        \n",
+    "\n",
     "fig.savefig(f'{file_id}.pdf')"
    ]
   },
