--- a/notebooks/mri/mri_liver_sketch.ipynb
+++ b/notebooks/mri/mri_liver_sketch.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "from collections import defaultdict\n",
+    "from collections import Counter\n",
     "\n",
     "import pydicom\n",
     "import numpy as np\n",
@@ -24,8 +24,8 @@
    "source": [
     "!mkdir ./dcm_scratch\n",
     "!rm ./dcm_scratch/*\n",
-    "!cp /home/sam/liver_mri_bulk/1030316_20254_2_0.zip ./dcm_scratch/\n",
-    "!unzip ./dcm_scratch/1030316_20254_2_0.zip -d ./dcm_scratch/"
+    "!cp /mnt/ml4cvd/projects/bulk/liver_mri/1000387_20254_2_0.zip ./dcm_scratch/\n",
+    "!unzip ./dcm_scratch/1000387_20254_2_0.zip -d ./dcm_scratch/"
    ]
   },
   {
@@ -34,20 +34,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "stats = Counter()\n",
     "dcm_dir = './dcm_scratch/'\n",
-    "series = defaultdict(list)\n",
     "for dcm_file in os.listdir(dcm_dir):\n",
     "    if not dcm_file.endswith('.dcm'):\n",
     "        continue\n",
     "    dcm = pydicom.read_file(dcm_dir + dcm_file)\n",
-    "    #print(dcm)\n",
-    "    print(dcm.InstanceNumber, dcm.SeriesNumber, dcm.SeriesDescription, dcm.PixelSpacing)\n",
-    "    print(f\" series num:{dcm.SeriesNumber} Instance number: {dcm.InstanceNumber}, big pix:{dcm.LargestImagePixelValue}, rows:{dcm.Rows}, cols:{dcm.Columns}\")\n",
-    "    if dcm.LargestImagePixelValue < 1024:\n",
-    "        series[dcm.SeriesNumber].append(dcm.InstanceNumber)\n",
-    "print('len is:' ,len(series), series)\n",
-    "for k in series:\n",
-    "    print(len(series[k]))"
+    "    stats['count'] += 1\n",
+    "    stats[f'series_num_{dcm.SeriesNumber}'] += 1\n",
+    "    stats[f'Series Description_{dcm.SeriesDescription}'] += 1\n",
+    "    stats[f'Series InstanceNumber_{dcm.InstanceNumber}'] += 1\n",
+    "    stats[f'Pixel spacing{dcm.PixelSpacing}'] += 1\n",
+    "    stats[f'Shape {dcm.pixel_array.shape}'] += 1\n",
+    "    stats[f'Big pix:{dcm.LargestImagePixelValue}'] += 1\n",
+    "\n",
+    "for k in stats:\n",
+    "    print(f'{k} has {stats[k]}')"
    ]
   },
   {
@@ -65,9 +67,10 @@
     "    if dcm.LargestImagePixelValue > 1024:\n",
     "        row = 1\n",
     "        continue\n",
-    "    print(f\"Series: {dcm.SeriesDescription.lower().replace(' ', '_')}, Instance number: {dcm.InstanceNumber}, dcm series {dcm.SeriesNumber} big pix:{dcm.LargestImagePixelValue}\")\n",
-    "    ideal_index = 6*(dcm.InstanceNumber-1) + ((dcm.SeriesNumber-37)//2)  \n",
-    "    axes[ideal_index//6, ideal_index%6].imshow(dcm.pixel_array)"
+    "    ideal_index = 6*(int(dcm.InstanceNumber)-1) + ((dcm.SeriesNumber-31)//2)  \n",
+    "    axes[ideal_index//6, ideal_index%6].imshow(dcm.pixel_array, cmap='gray', vmin=np.min(dcm.pixel_array), vmax=np.max(dcm.pixel_array))\n",
+    "    axes[ideal_index//6, ideal_index%6].set_yticklabels([])\n",
+    "    axes[ideal_index//6, ideal_index%6].set_xticklabels([])"
    ]
   },
   {
@@ -77,8 +80,32 @@
    "outputs": [],
    "source": [
     "!rm ./dcm_scratch/*\n",
-    "!cp /mnt/disks/data/raw/mris/liver/1098695_20203_2_0.zip ./dcm_scratch/\n",
-    "!unzip ./dcm_scratch/1098695_20203_2_0.zip -d ./dcm_scratch/"
+    "!cp /mnt/ml4cvd/projects/bulk/liver_mri/1000795_20203_2_0.zip ./dcm_scratch/\n",
+    "!unzip ./dcm_scratch/1000795_20203_2_0.zip -d ./dcm_scratch/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = Counter()\n",
+    "dcm_dir = './dcm_scratch/'\n",
+    "for dcm_file in os.listdir(dcm_dir):\n",
+    "    if not dcm_file.endswith('.dcm'):\n",
+    "        continue\n",
+    "    dcm = pydicom.read_file(dcm_dir + dcm_file)\n",
+    "    stats['count'] += 1\n",
+    "    stats[f'series_num_{dcm.SeriesNumber}'] += 1\n",
+    "    stats[f'Series Description_{dcm.SeriesDescription}'] += 1\n",
+    "    stats[f'Series InstanceNumber_{dcm.InstanceNumber}'] += 1\n",
+    "    stats[f'Pixel spacing{dcm.PixelSpacing}'] += 1\n",
+    "    stats[f'Shape {dcm.pixel_array.shape}'] += 1\n",
+    "    stats[f'Big pix:{dcm.LargestImagePixelValue}'] += 1\n",
+    "\n",
+    "for k in stats:\n",
+    "    print(f'{k} has {stats[k]}')"
    ]
   },
   {
@@ -96,7 +123,9 @@
     "    print(f\"Series: {dcm.SeriesDescription.lower().replace(' ', '_')} Instance number: {dcm.InstanceNumber}, pix space{dcm.PixelSpacing} big pix:{dcm.LargestImagePixelValue}\")\n",
     "    if dcm.LargestImagePixelValue > 1024:\n",
     "        row = 1    \n",
-    "    axes[row, dcm.InstanceNumber-1].imshow(dcm.pixel_array)"
+    "    axes[row, dcm.InstanceNumber-1].imshow(dcm.pixel_array, cmap='gray', vmin=np.min(dcm.pixel_array), vmax=np.max(dcm.pixel_array))\n",
+    "    axes[row, dcm.InstanceNumber-1].set_yticklabels([])\n",
+    "    axes[row, dcm.InstanceNumber-1].set_xticklabels([])"
    ]
   },
   {
@@ -106,8 +135,32 @@
    "outputs": [],
    "source": [
     "!rm ./dcm_scratch/*\n",
-    "!cp /home/sam/liver_mri_bulk/1000107_20204_2_0.zip ./dcm_scratch/\n",
-    "!unzip ./dcm_scratch/1000107_20204_2_0.zip -d ./dcm_scratch/"
+    "!cp /mnt/ml4cvd/projects/bulk/liver_mri/1000387_20204_2_0.zip ./dcm_scratch/\n",
+    "!unzip ./dcm_scratch/1000387_20204_2_0.zip -d ./dcm_scratch/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = Counter()\n",
+    "dcm_dir = './dcm_scratch/'\n",
+    "for dcm_file in os.listdir(dcm_dir):\n",
+    "    if not dcm_file.endswith('.dcm'):\n",
+    "        continue\n",
+    "    dcm = pydicom.read_file(dcm_dir + dcm_file)\n",
+    "    stats['count'] += 1\n",
+    "    stats[f'series_num_{dcm.SeriesNumber}'] += 1\n",
+    "    stats[f'Series Description_{dcm.SeriesDescription}'] += 1\n",
+    "    stats[f'Series InstanceNumber_{dcm.InstanceNumber}'] += 1\n",
+    "    stats[f'Pixel spacing{dcm.PixelSpacing}'] += 1\n",
+    "    stats[f'Shape {dcm.pixel_array.shape}'] += 1\n",
+    "    stats[f'Big pix:{dcm.LargestImagePixelValue}'] += 1\n",
+    "\n",
+    "for k in stats:\n",
+    "    print(f'{k} has {stats[k]}')"
    ]
   },
   {
@@ -122,23 +175,17 @@
     "        continue\n",
     "    row = 0\n",
     "    dcm = pydicom.read_file(dcm_dir + dcm_file)\n",
-    "    print(f\"Series description:{dcm.SeriesDescription.lower().replace(' ', '_')} Series num:{dcm.SeriesNumber} Instance number: {dcm.InstanceNumber}, pix space{dcm.PixelSpacing} big pix:{dcm.LargestImagePixelValue}, rows:{dcm.Rows}, cols:{dcm.Columns}\")\n",
-    "\n",
+    "   \n",
     "    if 'fitparams' in dcm.SeriesDescription.lower():\n",
     "        row = 2\n",
     "    elif 't1map' in dcm.SeriesDescription.lower():\n",
     "        row = 3\n",
     "    elif dcm.LargestImagePixelValue > 1024:\n",
     "        row = 1 \n",
-    "    axes[row, dcm.InstanceNumber-1].imshow(dcm.pixel_array)"
+    "    axes[row, dcm.InstanceNumber-1].imshow(dcm.pixel_array, cmap='gray', vmin=np.min(dcm.pixel_array), vmax=np.max(dcm.pixel_array))\n",
+    "    axes[row, dcm.InstanceNumber-1].set_yticklabels([])\n",
+    "    axes[row, dcm.InstanceNumber-1].set_xticklabels([])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
