Add long axis MRI notebook  (#82)

--- a/notebooks/mri/mri_cardiac_short_axis_sketch.ipynb
+++ b/notebooks/mri/mri_cardiac_short_axis_sketch.ipynb
@@ -68,7 +68,7 @@
     "MRI_SMALL_RADIUS_FACTOR = 0.19\n",
     "MRI_SEGMENTED_CHANNEL_MAP = {'background': 0, 'ventricle': 1, 'myocardium': 2}\n",
     "def _is_mitral_valve_segmentation(d) -> bool:\n",
-    "    return d.ImagePositionPatient[0] < 0\n",
+    "    return d.SliceThickness == 6\n",
     "\n",
     "def _get_overlay_from_dicom(d, debug=False):\n",
     "    \"\"\"Get an overlay from a DICOM file\n",
