--- a/notebooks/ecg/ecg_sketch.ipynb
+++ b/notebooks/ecg/ecg_sketch.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import h5py\n",
     "import argparse\n",
     "import numpy as np\n",
     "from collections import Counter\n",
@@ -27,6 +28,47 @@
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _to_float_or_false(s, sentinel=0):\n",
+    "    try:\n",
+    "        return float(s)\n",
+    "    except ValueError:\n",
+    "        return sentinel\n",
+    "\n",
+    "stats = Counter()\n",
+    "xml_files = '/mnt/disks/ecg-rest-xml/'\n",
+    "\n",
+    "ECG_TABLE_TAGS = ['RAmplitude'] #, 'SAmplitude']\n",
+    "\n",
+    "for f in os.listdir(xml_files):\n",
+    "    if not f.endswith('.xml'):\n",
+    "        continue\n",
+    "    if '_20205_' not in f:\n",
+    "        continue\n",
+    "    root = et.parse(xml_files + f).getroot()\n",
+    "    for c in root.findall(\"./RestingECGMeasurements/MeasurementTable\"):\n",
+    "        for cc in c:\n",
+    "            if cc.tag not in ECG_TABLE_TAGS:\n",
+    "                continue\n",
+    "            print(cc.tag, cc.attrib)\n",
+    "            print(list(map(_to_float_or_false, cc.text.strip().split(','))))\n",
+    "             \n",
+    "    \n",
+    "    for c in root.findall(\"./StripData/SampleRate\"):\n",
+    "        stats['Sample Rate_' + c.text] += 1\n",
+    "    for c in root.findall(\"./StripData/Resolution\"):\n",
+    "        stats['Resolution_' + c.text] += 1\n",
+    "    stats['count'] += 1\n",
+    "    if stats['count'] % 200 == 0:\n",
+    "        print(stats)\n",
+    "print(stats)"
    ]
   },
   {
